--- a/client/src/modules/peoplesearch/peoplesearch-cards.component.scss
+++ b/client/src/modules/peoplesearch/peoplesearch-cards.component.scss
@@ -77,6 +77,20 @@ people-search-cards {
       }
     }
   }
+
+  .advanced-search-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    > * + * {
+      margin-top: 5px;
+    }
+
+    &+ div {
+      margin-top: 15px;
+    }
+  }
 }
 
 [dir="rtl"] {
