--- a/client/src/modules/peoplesearch/peoplesearch-table.component.html
+++ b/client/src/modules/peoplesearch/peoplesearch-table.component.html
@@ -30,14 +30,10 @@
                     placeholder="{{'Placeholder_Search' | translate}}" auto-focus>
     </ias-search-box>
 
-    <ias-button id="advanced-search-icon" class="ias-icon-button" ng-click="$ctrl.toggleAdvancedSearch()"
+    <ias-button id="advanced-search-icon" class="ias-icon-button" ng-click="$ctrl.enableAdvancedSearch()"
                 ng-if="!$ctrl.advancedSearch && $ctrl.advancedSearchEnabled"
                 ng-attr-title="{{ 'Title_AdvancedSearch' | translate }}">
         <ias-icon class="ias-selected" icon="search_advanced"></ias-icon>
-    </ias-button>
-    <ias-button id="close-advanced-search-icon" class="ias-icon-button" ng-click="$ctrl.toggleAdvancedSearch()"
-                ng-if="$ctrl.advancedSearch" ng-attr-title="{{ 'Button_Close' | translate }}">
-        <ias-icon class="ias-selected" icon="close_thin"></ias-icon>
     </ias-button>
 
     <span class="ias-fill"></span>
@@ -77,7 +73,7 @@
             <option ng-repeat="tag in $ctrl.advancedSearchTags" ng-attr-value="{{tag.attribute}}">{{tag.label}}</option>
         </select>
         <input ng-model="query.value" autocomplete="off">
-        <ias-button class="ias-icon-button" ng-click="$ctrl.removeSearchTag($index)" ng-if="$index > 0"
+        <ias-button class="ias-icon-button" ng-click="$ctrl.removeSearchTag($index)"
                     ng-attr-title="{{ 'Button_Remove' | translate }}">
             <ias-icon icon="close_thin"></ias-icon>
         </ias-button>
