--- a/client/src/modules/helpdesk/helpdesk-search.component.scss
+++ b/client/src/modules/helpdesk/helpdesk-search.component.scss
@@ -31,10 +31,6 @@ help-desk-search-table {
     margin-bottom: 0;
   }
 
-  .ias-search {
-    margin-right: 10px;
-  }
-
   .verifications-button {
     margin: 5px 5px 5px 0;
   }
@@ -44,17 +40,33 @@ help-desk-search-table {
     overflow: auto;
   }
 
-  .advanced-search-container {
+  .helpdesk-search-header {
     display: flex;
-    flex-direction: column;
     align-items: flex-start;
 
-    > * + * {
-      margin-top: 5px;
+    .basic-search-container {
+      display: flex;
+      align-items: center;
+      margin-bottom: 15px;
+
+      > * + * {
+        margin-left: 10px;
+      }
     }
 
-    &+ div {
-      margin-top: 15px;
+    .advanced-search-container {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      margin-bottom: 15px;
+
+      > * + * {
+        margin-top: 5px;
+      }
+
+      &+ div {
+        margin-top: 15px;
+      }
     }
   }
 }
