--- a/client/src/modules/peoplesearch/peoplesearch-table.component.html
+++ b/client/src/modules/peoplesearch/peoplesearch-table.component.html
@@ -36,7 +36,7 @@
     </div>
     <div class="advanced-search-container" ng-if="$ctrl.advancedSearch">
         <div class="attribute-row" ng-repeat="query in $ctrl.queries">
-            <select ng-model="query.key">
+            <select ng-model="query.key" ng-change="$ctrl.onAdvancedSearchValueChanged($event)">
                 <option ng-repeat="tag in $ctrl.advancedSearchTags" ng-attr-value="{{tag.attribute}}">{{tag.label}}</option>
             </select>
             <input ng-model="query.value" autocomplete="off" ng-change="$ctrl.onAdvancedSearchValueChanged($event)"
