--- a/client/src/modules/peoplesearch/peoplesearch.scss
+++ b/client/src/modules/peoplesearch/peoplesearch.scss
@@ -74,6 +74,10 @@ body {
       &+ div {
         margin-top: 15px;
       }
+
+      select.attribute-value {
+        min-width: 210px;
+      }
     }
   }
 
