--- a/client/src/modules/peoplesearch/person-details-dialog.component.scss
+++ b/client/src/modules/peoplesearch/person-details-dialog.component.scss
@@ -24,6 +24,14 @@
   clear: both;
   margin-top: 15px;
   text-align: center;
+
+  > .ias-icon-text-button + .ias-icon-button {
+    margin-left: 20px;
+  }
+
+  > .ias-icon-button + .ias-icon-button {
+    margin-left: 10px;
+  }
 }
 
 .person-details-dialog {
