Updated to use the new printer icon Lynn created.

--- a/client/src/modules/peoplesearch/orgchart-search.component.html
+++ b/client/src/modules/peoplesearch/orgchart-search.component.html
@@ -50,7 +50,7 @@
     <ias-button id="print-icon" class="ias-icon-button"
                 ng-click="$ctrl.printOrgChart()" ng-if="$ctrl.printEnabled"
                 ng-attr-title="{{ 'Title_Print' | translate }}">
-        <ias-icon class="ias-selected" icon="queue_list"></ias-icon>
+        <ias-icon class="ias-selected" icon="printer"></ias-icon>
     </ias-button>
 </div>
 
