Changed the name of the class that identifies where IAS styles should start being applied to be: "ias-styles-root".  Then updated the dialogs so the styles get applied there too, since they are added to the DOM outside of <ui-view class="ias-styles-root">.

--- a/client/src/modules/peoplesearch/orgchart.component.scss
+++ b/client/src/modules/peoplesearch/orgchart.component.scss
@@ -27,7 +27,7 @@ $org-chart-text-color: #808080;
 
 $manager-connector-height: 16px;
 
-.app-root {
+.ias-styles-root {
   .reports {
     background-color: #dae1e1;
     border-radius: 2px;
