--- a/client/src/components/changepassword/autogen-change-password.component.html
+++ b/client/src/components/changepassword/autogen-change-password.component.html
@@ -20,36 +20,38 @@
   ~ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
   -->
 
-<div class="ias-dialog autogen-change-password-dialog">
-    <div class="ias-dialog-container">
-        <div class="ias-dialog-label">
-            <div class="ias-title" ng-bind="'Title_RandomPasswords' | translate"></div>
-        </div>
-        <div class="ias-dialog-content">
-            <p ng-bind="'Display_PasswordGeneration' | translate"></p>
-            <table>
-                <tbody>
-                <tr ng-repeat="i in [0,2,4,6,8,10,12,14,16,18]">
-                    <td ng-repeat="j in [i, i+1]">
-                        <div ng-bind="$ctrl.passwordSuggestions[j]" ng-click="$ctrl.onChoosePasswordSuggestion(j)">
-                        </div>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="ias-actions">
-            <ias-button ng-click="$ctrl.populatePasswordSuggestions()"
-                        ng-disabled="$ctrl.fetchingRandoms">{{ 'Button_More' | translate }}
-            </ias-button>
-            <ias-button ng-click="cancel()">{{ 'Button_Cancel' | translate }}</ias-button>
-        </div>
+<div class="ias-styles-root">
+    <div class="ias-dialog autogen-change-password-dialog">
+        <div class="ias-dialog-container">
+            <div class="ias-dialog-label">
+                <div class="ias-title" ng-bind="'Title_RandomPasswords' | translate"></div>
+            </div>
+            <div class="ias-dialog-content">
+                <p ng-bind="'Display_PasswordGeneration' | translate"></p>
+                <table>
+                    <tbody>
+                    <tr ng-repeat="i in [0,2,4,6,8,10,12,14,16,18]">
+                        <td ng-repeat="j in [i, i+1]">
+                            <div ng-bind="$ctrl.passwordSuggestions[j]" ng-click="$ctrl.onChoosePasswordSuggestion(j)">
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="ias-actions">
+                <ias-button ng-click="$ctrl.populatePasswordSuggestions()"
+                            ng-disabled="$ctrl.fetchingRandoms">{{ 'Button_More' | translate }}
+                </ias-button>
+                <ias-button ng-click="cancel()">{{ 'Button_Cancel' | translate }}</ias-button>
+            </div>
 
-        <ias-button class="ias-icon-button ias-dialog-cancel-button"
-                    id="close-icon"
-                    ng-attr-title="{{ 'Button_CloseWindow' | translate }}"
-                    ng-click="cancel()">
-            <ias-icon icon="close_thick"></ias-icon>
-        </ias-button>
+            <ias-button class="ias-icon-button ias-dialog-cancel-button"
+                        id="close-icon"
+                        ng-attr-title="{{ 'Button_CloseWindow' | translate }}"
+                        ng-click="cancel()">
+                <ias-icon icon="close_thick"></ias-icon>
+            </ias-button>
+        </div>
     </div>
 </div>
