--- a/client/src/components/changepassword/random-change-password.component.html
+++ b/client/src/components/changepassword/random-change-password.component.html
@@ -20,26 +20,28 @@
   ~ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
   -->
 
-<div class="ias-dialog random-change-password-dialog">
-    <div class="ias-dialog-container">
-        <div class="ias-dialog-label">
-            <div class="ias-title" ng-bind="'Title_ChangePassword' | translate"></div>
-        </div>
+<div class="ias-styles-root">
+    <div class="ias-dialog random-change-password-dialog">
+        <div class="ias-dialog-container">
+            <div class="ias-dialog-label">
+                <div class="ias-title" ng-bind="'Title_ChangePassword' | translate"></div>
+            </div>
 
-        <div class="ias-dialog-content">
-            <p ng-bind="'Display_SetRandomPasswordPrompt' | translate"></p>
-        </div>
+            <div class="ias-dialog-content">
+                <p ng-bind="'Display_SetRandomPasswordPrompt' | translate"></p>
+            </div>
 
-        <div class="ias-actions">
-            <ias-button ng-click="$ctrl.confirmSetRandomPassword()">{{ 'Button_OK' | translate }}</ias-button>
-            <ias-button ng-click="cancel()">{{ 'Button_Cancel' | translate }}</ias-button>
-        </div>
+            <div class="ias-actions">
+                <ias-button ng-click="$ctrl.confirmSetRandomPassword()">{{ 'Button_OK' | translate }}</ias-button>
+                <ias-button ng-click="cancel()">{{ 'Button_Cancel' | translate }}</ias-button>
+            </div>
 
-        <ias-button class="ias-icon-button ias-dialog-cancel-button"
-                    id="close-icon"
-                    ng-attr-title="{{ 'Button_CloseWindow' | translate }}"
-                    ng-click="cancel()">
-            <ias-icon icon="close_thick"></ias-icon>
-        </ias-button>
+            <ias-button class="ias-icon-button ias-dialog-cancel-button"
+                        id="close-icon"
+                        ng-attr-title="{{ 'Button_CloseWindow' | translate }}"
+                        ng-click="cancel()">
+                <ias-icon icon="close_thick"></ias-icon>
+            </ias-button>
+        </div>
     </div>
 </div>
