--- a/client/src/modules/helpdesk/helpdesk-search.component.scss
+++ b/client/src/modules/helpdesk/helpdesk-search.component.scss
@@ -20,7 +20,7 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
-.app-root {
+.ias-styles-root {
   help-desk-search-cards,
   help-desk-search-table {
     display: flex;
