--- a/client/src/modules/peoplesearch/peoplesearch-table.component.scss
+++ b/client/src/modules/peoplesearch/peoplesearch-table.component.scss
@@ -20,7 +20,7 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
-.app-root {
+.ias-styles-root {
     people-search-table {
         #page-content-title {
             margin-bottom: 0;
