--- a/client/src/modules/peoplesearch/person-details-dialog.component.scss
+++ b/client/src/modules/peoplesearch/person-details-dialog.component.scss
@@ -20,7 +20,7 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
-.app-root {
+.ias-styles-root {
   .person-dialog-actions {
     clear: both;
     margin-top: 15px;
