Added a little more specificity.

--- a/webapp/src/main/webapp/public/resources/style.css
+++ b/webapp/src/main/webapp/public/resources/style.css
@@ -1739,6 +1739,6 @@ table.ias-table, table.ias-table td {
     white-space: pre;
 }
 
-.title-short {
+#header-title > .title-short {
     display: none;
 }
