Fixed a problem where the button on the token validation dialog was running off the page when too long.

--- a/client/src/modules/helpdesk/verifications-dialog.component.scss
+++ b/client/src/modules/helpdesk/verifications-dialog.component.scss
@@ -4,13 +4,12 @@
 }
 
 .token-destination-submitter {
-    display: grid;
-    grid-template-columns: max-content max-content max-content;
-    grid-column-gap: 10px;
-    grid-row-gap: 5px;
+    display: flex;
+    flex-wrap: wrap;
     align-items: center;
 
-    select {
-        grid-column-start: 1;
+    > * {
+        margin-right: 10px !important;
+        margin-top: 4px !important;
     }
 }
