Fixed a couple of UI bugs: * Text doesn't display properly when password policy description contains HTML * Settings buttons for list pages in People Search and Helpdesk aren't working

--- a/client/src/modules/helpdesk/helpdesk-detail.component.html
+++ b/client/src/modules/helpdesk/helpdesk-detail.component.html
@@ -166,7 +166,7 @@
                         <td ng-bind="'Field_Display' | translate"></td>
                         <td>
                             <ul>
-                                <li ng-repeat="item in $ctrl.person.passwordRequirements" ng-bind="item"></li>
+                                <li ng-repeat="item in $ctrl.person.passwordRequirements" ng-bind-html="item"></li>
                             </ul>
                         </td>
                     </tr>
