--- a/client/src/modules/helpdesk/helpdesk-detail.component.scss
+++ b/client/src/modules/helpdesk/helpdesk-detail.component.scss
@@ -98,7 +98,7 @@
             padding: 3px 15px;
           }
 
-          ul {
+          > ul {
             list-style: none;
             margin: 0;
             padding: 0;
