--- a/client/src/modules/helpdesk/helpdesk-search-table.component.html
+++ b/client/src/modules/helpdesk/helpdesk-search-table.component.html
@@ -79,7 +79,7 @@
         <ias-button class="ias-icon-button table-configuration-menu-toggle" ias-toggle="menu1">
             <ias-icon icon="configure_thick"></ias-icon>
         </ias-button>
-        <ias-menu name="menu1" ias-align="end end">
+        <ias-menu name="menu1" ias-align="end end" class="ias-styles-root">
             <div class="ias-input-container">
                 <div class="checkbox-button" ng-repeat="(key, value) in $ctrl.columnConfiguration">
                     <input type="checkbox" ng-checked="value.visible" aria-label="Toggle column visibility" disabled/>
