--- a/webapp/src/main/webapp/public/resources/style.css
+++ b/webapp/src/main/webapp/public/resources/style.css
@@ -560,6 +560,10 @@ html[dir="rtl"] #header-center-right {
     position: relative;
 }
 
+#header-title > .title-short {
+    display: none;
+}
+
 #header-right-logo {
     position: absolute;
 }
