--- a/client/src/modules/helpdesk/helpdesk-search.component.scss
+++ b/client/src/modules/helpdesk/helpdesk-search.component.scss
@@ -110,4 +110,11 @@
       }
     }
   }
+
+  .ias-input-container > .checkbox-button > .ias-button.toggle-column-btn {
+    &:focus, &:hover {
+      background-color: transparent;
+      box-shadow: none;
+    }
+  }
 }
