--- a/client/src/modules/peoplesearch/peoplesearch-table.component.scss
+++ b/client/src/modules/peoplesearch/peoplesearch-table.component.scss
@@ -43,4 +43,11 @@
             }
         }
     }
+
+    .ias-input-container > .checkbox-button > .ias-button.toggle-column-btn {
+        &:focus, &:hover {
+            background-color: transparent;
+            box-shadow: none;
+        }
+    }
 }
