Fixed a problem where the scroll bar wasn't being shown in the people search details dialog.

--- a/client/src/modules/peoplesearch/person-details-dialog.component.scss
+++ b/client/src/modules/peoplesearch/person-details-dialog.component.scss
@@ -36,11 +36,29 @@
   }
 
   .person-details-dialog {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: left;
     overflow: hidden;
 
     .ias-dialog-container {
+      display: flex;
+      margin: 0;
       padding: 0;
+      position: relative;
+      top: auto;
+      transform: none;
+
+      > .ias-dialog-content {
+        display: grid;
+        grid-template-rows: max-content 1fr;
+        flex-grow: 1;
+
+        > .person-details-content {
+          overflow: auto;
+        }
+      }
     }
 
     .ias-avatar {
