Added missing tooltip for the "Settings" icon.

--- a/client/src/modules/peoplesearch/peoplesearch-table.component.html
+++ b/client/src/modules/peoplesearch/peoplesearch-table.component.html
@@ -80,7 +80,8 @@
                     ng-attr-title="{{ 'Title_OrgChart' | translate }}">
             <ias-icon class="ias-selected" icon="orgchart_thin"></ias-icon>
         </ias-button>
-        <ias-button class="ias-icon-button table-configuration-menu-toggle" ias-toggle="menu1">
+        <ias-button class="ias-icon-button table-configuration-menu-toggle" ias-toggle="menu1"
+                    ng-attr-title="{{ 'Title_Settings' | translate }}">
             <ias-icon icon="configure_thick"></ias-icon>
         </ias-button>
         <ias-menu name="menu1" ias-align="end end" class="ias-styles-root">
