--- a/client/src/modules/helpdesk/helpdesk-search-table.component.html
+++ b/client/src/modules/helpdesk/helpdesk-search-table.component.html
@@ -76,7 +76,8 @@
             <ias-icon icon="view_list_thin"></ias-icon>
         </ias-button>
         <div class="icon-divider vertical"></div>
-        <ias-button class="ias-icon-button table-configuration-menu-toggle" ias-toggle="menu1">
+        <ias-button class="ias-icon-button table-configuration-menu-toggle" ias-toggle="menu1"
+                    ng-attr-title="{{ 'Title_Settings' | translate }}">
             <ias-icon icon="configure_thick"></ias-icon>
         </ias-button>
         <ias-menu name="menu1" ias-align="end end" class="ias-styles-root">
